2009-04-05  Guillaume Smet <guillaume-pg@smet.org>

	* applied a patch from Max Valjanski to support large pids on 64 bits
	servers
	* applied a patch from Steve Woodcock to fix a long standing problem
	resulting in leading "statement: " in the query text for some queries

2009-04-01  Guillaume Smet <guillaume-pg@smet.org>

	* applied [#1010529] Error in normalize for bigint (or numeric) numbers
	(length > 10) by Oleg Serov

2008-05-15  Guillaume Smet <guillaume-pg@smet.org>

	* fixed the regexp of the stderr parser to exclude the timezone
	from the timestamp pattern
	* fixed a problem with NOTICE lines causing other lines to be ignored
	(not sure about the consequences though...)

2008-05-13  Guillaume Smet <guillaume-pg@smet.org>

	* moved from Vera to DejaVuSans

2008-05-05  Guillaume Smet <guillaume.smet@openwide.fr>

	* fixed [#1010324] "Fails to recognize FSM info" reported by
	Peter Eisentraut
	* fixed [#1010306] "pgfouine 1.0 not recognizing postgres syslog
	lines" reported by Neil Murray by adding log_error_verbosity=verbose
	support

2008-03-19  Guillaume Smet <guillaume-pg@smet.org>

	* preliminary support for CSV log format introduced in 8.3

2008-03-09  Guillaume Smet <guillaume-pg@smet.org>

	* global copyright update
	* made date parsing more clever in syslog parser

2008-02-25  Guillaume Smet <guillaume-pg@smet.org>

	* applied a patch from Russell Garrett @last.fm to normalize
	hexadecimal numbers
	* added invalid startup packet error to ignore list [#1010261]
	* added a couple of words to colorize per [#1006782]
	* updated GeSHi to 1.0.7.20

2007-03-30  Guillaume Smet <guillaume-pg@smet.org>

	* updated GeSHi to 1.0.7.18
	* fixed test cases
	* fixed pgfouine_vacuum.php
	* released 1.0

2007-03-12  Guillaume Smet <guillaume-pg@smet.org>

	* improved stderr support by adding isContextual() method to lines
	* fixed normalization of query text for quote escaping
	* the timezone is not always present in stderr prefix so make it
	optional