@@ -1,3 +1,8 @@
+2009-04-12  Guillaume Smet <guillaume-pg@smet.org>
+
+	* implemented a simple garbage collector mechanism which should reduce
+	dramatically the memory usage when a connection pooler is not used
+
 2009-04-05  Guillaume Smet <guillaume-pg@smet.org>
 
 	* applied a patch from Max Valjanski to support large pids on 64 bits
